--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,5 @@
 
 
-
 html,
 body,
 #root {
@@ -8,7 +7,9 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  background: #F5F5F5;
 }
+
 
 * {
   box-sizing: border-box;
@@ -16,30 +17,29 @@ body,
   margin: 0;
 }
 
-body {
-  font-size: 13px;
-  color: #fefefe;
-  background: #151520;
-}
-
-.canvas {
-  touch-action: none;
-  height: 100vh !important;
-}
-
-a {
-  pointer-events: all;
-  color: white;
-  text-decoration: none;
-}
 
 main {
+  height: 100vh !important;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  min-height: 100vh;
 }
+
+
+
+
+
+canvas {
+  touch-action: none !important;
+  overflow: scroll !important;
+}
+.webgl {
+  height: 100vh !important;
+  width: 100vw !important;
+}
+
+
 
 
 
@@ -49,3 +49,51 @@ main {
   top: 5rem !important;
   height: 45px;
 }
+
+
+
+
+
+
+.content {
+  position: fixed !important;
+  top: 2rem;
+  width: 900px;
+  height: 600px;
+  background: #f0f0f0;
+  border-radius: 3px;
+  /* overflow-y: auto; */
+  padding: 0;
+}
+
+.wrapper iframe {
+  padding: 10px;
+  width: 900px;
+  height: 600px;
+  /* transform: scale(0.5); */
+  transform-origin: top left;
+}
+
+
+.htmlScreen iframe {
+  width: 1024px;
+  height: 670px;
+  border: none;
+  border-radius: 20px;
+  background: var(--main-dark);
+}
+
+
+.htmlPreview {
+  width: 1024px;
+  height: 670px;
+  border: none;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  color: green;
+}
+
+
