--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,99 +1,82 @@
-
-
-html,
-body,
-#root {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background: #F5F5F5;
-}
-
+@import './Contact.css';
 
 * {
   box-sizing: border-box;
-  padding: 0;
+}
+ 
+html,
+body,
+#root {
+  width: 100vw;
+  height: 100%;
   margin: 0;
+  padding: 0;
+  color: #141A26;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none !important;
+  overflow: hidden !important;
+  overscroll-behavior: none !important;
+}
+
+body {
+  position: fixed;
+  overflow: hidden;
+  overscroll-behavior-y: none;
+  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial, sans-serif;
+  background-color: #efefef;
+}
+
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  overflow: auto;
+}
+
+.webgl {
+  width: 100%;
+  height: 100vh !important;
+  position: absolute;
+  top: 0;
+  pointer-events: none;
+  overflow: hidden;
 }
 
 
-main {
-  height: 100vh !important;
+
+
+
+
+#Footer {
+  position: absolute;
+  bottom: 0;
+  right: 1em;
+  z-index: 200;
+  padding: 2rem;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(20px);
+  color: "red";
+  border-radius: 15px 0 0 0;
+  padding: 1rem;
+}
+#Footer > div {
+  margin: 0 0 0 2rem;
+}
+#Footer span {
+  font-weight: 900;
 }
 
-
-
-
-
-canvas {
-  touch-action: none !important;
-  overflow: scroll !important;
+#Footer svg {
+  
+  fill: green;
 }
-.webgl {
-  height: 100vh !important;
-  width: 100vw !important;
-}
-
-
-
-
-
-
-.statsFps {
-  position: absolute !important;
-  top: 5rem !important;
-  height: 45px;
-}
-
-
-
-
-
-
-.content {
-  position: fixed !important;
-  top: 2rem;
-  width: 900px;
-  height: 600px;
-  background: #f0f0f0;
-  border-radius: 3px;
-  /* overflow-y: auto; */
-  padding: 0;
-}
-
-.wrapper iframe {
-  padding: 10px;
-  width: 900px;
-  height: 600px;
-  /* transform: scale(0.5); */
-  transform-origin: top left;
-}
-
-
-.htmlScreen iframe {
-  width: 1024px;
-  height: 670px;
-  border: none;
-  border-radius: 20px;
-  background: var(--main-dark);
-}
-
-
-.htmlPreview {
-  width: 1024px;
-  height: 670px;
-  border: none;
-  border-radius: 4px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* justify-content: center; */
-  color: green;
-}
-
-
